[package]
name = "apdu-dispatch"
version = "0.1.1"
authors = ["Conor Patrick <conor@solokeys.com>", "Nicolas Stalder <n@stalder.io>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Dispatch layer after nfc-device and usbd-ccid"
repository = "https://github.com/solokeys/apdu-dispatch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delog = "0.1.4"
heapless = "0.7"
interchange = { git = "https://github.com/sosthene-nitrokey/interchange", rev = "dcafab8d46e7dcd1210e3d45a6250b57d5b20aed" }
iso7816 = "0.1.1"

[dev-dependencies]
# Testing
serial_test = "0.6"
hex-literal = "0.3.4"

[features]
default = []
std = ["delog/std"]

log-all = []
log-none = []
log-debug = []
log-info = []
log-trace = []
log-warn = []
log-error = []
